--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/Saka
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:mysql://localhost:3306/Saka
+spring.datasource.username=root
 spring.datasource.password=a1234
 spring.jpa.properties.javax.persistence.validation.mode = none
